k8s/user-service/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  selector:
    matchLabels:
      app: user
  replicas: 1
  template:
    metadata:
      labels:
        app: user
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: user
          image: vasapolrittideah/money-tracker-api-user:latest
          ports:
            - containerPort: 8000
            - containerPort: 9000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
