k8s/user-service/base/ingress-grpc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service-grpc-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
    - host: grpc.user-service.money-tracker.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  name: grpc
