k8s/user-service/base/ingress-http.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service-http-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: http.user-service.money-tracker.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  name: http
